avoid overlap

--- a/app/components/Calendar/index.less
+++ b/app/components/Calendar/index.less
@@ -4,6 +4,10 @@
 }
 
 .xfolio-calendar-editing {
+  h5 {
+    margin-bottom: 0;
+  }
+
   .timeframe {
     color: @primary-color;
     font-size: 2em;
